Fixed product images alignment

--- a/app/shop/products/products.module.css
+++ b/app/shop/products/products.module.css
@@ -7,10 +7,7 @@
   cursor: pointer;
 }
 .image {
-  width: 100%;
-  height: auto;
   max-width: 285px;
-  max-height: 300px;
   transition: 0.3s ease;
 }
 .image:hover {
